[package]
name = "foyer-storage-bench"
version = "0.7.2"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "storage engine bench tool for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/mrcroxx/foyer"
homepage = "https://github.com/mrcroxx/foyer"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
normal = ["foyer-workspace-hack"]

[dependencies]
anyhow = "1"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.2", optional = true }
foyer-common = { version = "0.6", path = "../foyer-common" }
foyer-memory = { version = "0.3", path = "../foyer-memory" }
foyer-storage = { version = "0.7", path = "../foyer-storage" }
foyer-workspace-hack = { version = "0.5", path = "../foyer-workspace-hack" }
futures = "0.3"
hdrhistogram = "7"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "server",
    "server-auto",
    "http1",
    "http2",
    "tokio",
] }
itertools = "0.12"
libc = "0.2"
nix = { version = "0.28", features = ["fs", "mman"] }
opentelemetry = { version = "0.22", optional = true }
opentelemetry-otlp = { version = "0.15.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.14", optional = true }
opentelemetry_sdk = { version = "0.22", features = [
    "rt-tokio",
    "trace",
], optional = true }
parking_lot = "0.12"
prometheus = "0.13"
rand = "0.8.5"
serde ={ version = "1", features = ["derive", "rc"] }
serde_bytes = "0.11.14"
tokio = { workspace = true }
tracing = "0.1"
tracing-opentelemetry = { version = "0.23", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zipf = "7"

[features]
deadlock = ["parking_lot/deadlock_detection", "foyer-storage/deadlock"]
tokio-console = ["console-subscriber"]
trace = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "opentelemetry-semantic-conventions",
]
