[package]
name = "foyer-tokio"
description = "tokio adapter for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude.workspace = true

[package.metadata.cargo-udeps.ignore]
# Only used in benches and with `serde` feature enabled.
development = ["criterion", "serde_bytes"]

[features]
# feature gate to swtich between tokio runtime and madsim-tokio runtime.
runtime-tokio = ["dep:runtime-tokio"]
runtime-madsim-tokio = ["dep:runtime-madsim-tokio"]

# feature gates for tokio / madsim-tokio
full = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]
fs = ["runtime-tokio?/fs"]
io-util = ["runtime-tokio?/io-util"]
io-std = ["runtime-tokio?/io-std"]
macros = ["runtime-tokio?/macros"]
net = ["runtime-tokio?/net"]
parking_lot = ["runtime-tokio?/parking_lot"]
process = ["runtime-tokio?/process"]
rt = ["runtime-tokio?/rt"]
rt-multi-thread = ["runtime-tokio?/rt-multi-thread"]
signal = ["runtime-tokio?/signal"]
sync = ["runtime-tokio?/sync"]
time = ["runtime-tokio?/time"]

[dependencies]
runtime-madsim-tokio = { workspace = true, optional = true }
runtime-tokio = { workspace = true, optional = true }

[lints]
workspace = true
