[package]
name = "foyer-utils"
version = "0.0.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "utils for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/foyer-rs/foyer"
homepage = "https://github.com/foyer-rs/foyer"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3"
bytes = "1"
cfg-if = "1"
futures = "0.3"
hashbrown = "0.14"
itertools = { workspace = true }
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }
parking_lot = { version = "0.12", features = ["arc_lock"] }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
