[package]
name = "foyer-utils"
description = "utils for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3"
bitvec = "1"
bytes = "1"
cfg-if = "1"
foyer-common = { workspace = true }
futures = "0.3"
hashbrown = "0.14"
itertools = { workspace = true }
parking_lot = { version = "0.12", features = ["arc_lock"] }
serde = { workspace = true }
tokio = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
rand = "0.8.5"
