[package]
name = "foyer"
description = "foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude.workspace = true

[package.metadata.docs.rs]
features = ["serde", "tracing", "nightly", "deadlock", "strict_assertions"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-udeps.ignore]
# Only used in doc test.
development = ["chrono"]

[features]
default = []
clap = ["foyer-storage/clap"]
serde = ["foyer-common/serde", "foyer-storage/serde"]
nightly = ["foyer-storage/nightly", "foyer-memory/nightly"]
tracing = [
  "dep:fastrace",
  "foyer-common/tracing",
  "foyer-memory/tracing",
  "foyer-storage/tracing",
]
test_utils = ["foyer-storage/test_utils"]
deadlock = ["foyer-storage/deadlock"]
strict_assertions = [
  "foyer-common/strict_assertions",
  "foyer-memory/strict_assertions",
  "foyer-storage/strict_assertions",
]

[dependencies]
anyhow = { workspace = true }
equivalent = { workspace = true }
fastrace = { workspace = true, optional = true }
foyer-common = { workspace = true }
foyer-memory = { workspace = true }
foyer-storage = { workspace = true }
futures-util = { workspace = true }
mea = { workspace = true }
mixtrics = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

tokio = { package = "madsim-tokio", version = "0.2", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "signal",
  "fs",
] }

[dev-dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
foyer = { path = ".", features = ["test_utils"] }
foyer-storage = { workspace = true, features = ["test_utils"] }
rand = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace", "color"] }

[lints]
workspace = true

[[test]]
name = "hybrid_cache_fuzzy_test"
required-features = ["test_utils"]
