[package]
name = "foyer"
description = "foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude.workspace = true

[package.metadata.docs.rs]
features = ["serde", "tracing", "nightly", "deadlock", "strict_assertions"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["runtime-tokio"]
clap = ["foyer-storage/clap"]
serde = ["foyer-common/serde", "foyer-storage/serde"]
nightly = ["foyer-storage/nightly", "foyer-memory/nightly"]
tracing = [
  "dep:fastrace",
  "foyer-common/tracing",
  "foyer-memory/tracing",
  "foyer-storage/tracing",
]
test_utils = ["foyer-storage/test_utils"]
deadlock = ["foyer-storage/deadlock"]
strict_assertions = [
  "foyer-common/strict_assertions",
  "foyer-memory/strict_assertions",
  "foyer-storage/strict_assertions",
]
runtime-tokio = ["tokio/runtime-tokio"]
runtime-madsim-tokio = ["tokio/runtime-madsim-tokio"]

[dependencies]
anyhow = { workspace = true }
equivalent = { workspace = true }
fastrace = { workspace = true, optional = true }
foyer-common = { workspace = true }
foyer-memory = { workspace = true }
foyer-storage = { workspace = true }
futures-util = { workspace = true }
mea = { workspace = true }
mixtrics = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
foyer = { path = ".", default-features = false, features = ["test_utils"] }
foyer-storage = { workspace = true, features = ["test_utils"] }
jiff = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true, features = ["trace", "color"] }
tokio = { workspace = true }

[lints]
workspace = true

[[test]]
name = "hybrid_cache_fuzzy_test"
required-features = ["test_utils"]
