[package]
name = "foyer-memory-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
ahash = "0.8"
arbitrary = { version = "1", features = ["derive"] }
foyer-memory = { path = ".." }
foyer-workspace-hack = { version = "0.4", path = "../../foyer-workspace-hack" }
libfuzzer-sys = "0.4"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "cache_fuzz"
path = "fuzz_targets/cache_fuzz.rs"
test = false
doc = false
bench = false
